--- a/trunk/x10.runtime.cws/paper/IPDPS08/x10graphdesign.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/x10graphdesign.tex
@@ -10,20 +10,23 @@ When there is a large gap between model and architecture, programming languages 
 %% With the PRAM model, synchronous processors are available in an unlimited amount, and accesses to memory locations are of uniform distance. 
 PRAM is highly idealistic and conducive to exploring the inherent parallelism of a problem. For practical purposes, PRAM does not reflect features of main-stream architectures that are critical to performance. Significant effort is necessary to produce efficient implementations on even shared-memory systems, for example, SMPs. Few PRAM algorithms have been adapted to the distributed-memory environment with significant overhaul of major algorithm steps. More practical models such as BSP and LogP, on the other hand, parameterize communication, synchronization, and even memory access costs. As a result, algorithms may be mapped onto real machines with reasonable ease and performance, yet design choices are severely limited as the dimension of fine-grained parallelism is virtually excluded. After decades of effort, designing and implementing parallel graph algorithms for large, irregular inputs on either class of models remains challenging. 
 
- One of the biggest challenges of efficiently simulating a PRAM algorithm on modern architectures is load balancing. Load-balancing is not an issue with PRAM as there are always enough processors. Consider a graph algorithm for sparse, irregular instances with adjacency list as the input. A PRAM algorithm may assign for each edge (in this case each neighbor $v$ in the adjacency list of vertex $u$) a processor, and takes $O(n)$ processors. When simulating on $p$ ($p\ll n$) processors, $\frac{n}{p}$ vertices are usually assigned to one processor. As the graph is irregular with potentially huge difference among the number of neighbors for each processor, load-imbalance constitutes a serious performance problem. Keeping track of workload distribution becomes even more cumbersome when the algorithms compact the input graphs. The load-balancing challenge with popular distributed-memory models such as BSP and LogP is that no known practical technique exists that partitions a graph evenly.  
+ One of the biggest challenges of efficiently simulating a PRAM algorithm on modern architectures is load balancing. Load-balancing is not an issue with PRAM as there are always enough processors. Consider a graph algorithm for sparse, irregular instances with adjacency list as the input. A PRAM algorithm may assign for each edge (in this case each neighbor $v$ in the adjacency list of vertex $u$) a processor, and takes $O(n)$ processors. When simulating on $p$ ($p\ll n$) processors, $\frac{n}{p}$ vertices are usually assigned to one processor. As the graph is irregular with potentially huge difference among the number of neighbors for each processor, load-imbalance constitutes a serious performance problem. Keeping track of workload distribution becomes even more cumbersome when the algorithms compact the input graphs. The load-balancing challenge with popular distributed-memory models such as BSP and LogP is that no known practical technique exists that partitions a graph evenly.
 
 % X10 provides a programming model that allows for expression of data and task parallelism,  and at the same time good efficiency guarantee. With expressive programming constructs and efficient runtime support, X10 greatly reduces for a programmer the gap between algorithm and target systems.
 The programming model of X10 enables an algorithm designer to focus on expressing the appropriate parallelism, and leaves to the runtime system mapping and scheduling activities on to the processors in a load-balanced fashion. X10 makes a big step in terms of productivity and performance in solving large-scale, irregular graph problems on current supercomputers.
 
 %%  X10 is designed for applications that run on a cluster of SMPs. First note that similar to PGAS languages, a global virtual space is provided and this is critical in solving sparse, irregular graph instances as no graph partitioning techniques are available. Also X10 provides a notion of affinity that helps. X10 also provides various task constructs that is critical in expressing various kinds of parallelism. 
 
- We next present two algorithms that are programmed in X10 and showcase its expressiveness in designing graph algorithms. Among the many productivity-improving features, we here choose to show those that are related to activity scheduling. 
-As an example, we consider the spanning tree problem. Finding a spanning tree of a graph is an important building
+ We next present two algorithms that are programmed in X10 and showcase its expressiveness in designing graph algorithms. Among the many productivity-improving features, we here choose to show those that are related to activity scheduling as this is the foundation of high performance guarantee from X10. 
+We take the spanning tree problem as our example. Finding a spanning tree of a graph is an important building
 block for many graph algorithms, for example, biconnected components
-and ear decomposition \cite{MR86}, and can be used in graph planarity
-testing \cite{KR88}.Section~\ref{s:trav} describes a new algorithm on SMP, and section~\ref{s:trav-dist} is the algorithm
-for distributed environment.
-
+and ear decomposition \cite{MR86}, and can be used in graph planarity testing \cite{KR88}.
+Spanning tree represents a wide range of graph problems that have fast
+theoretic parallel algorithms but no known efficient
+parallel implementations that achieve speedup without serious restricting assumptions about the inputs. 
+Section~\ref{s:trav} describes a new algorithm on SMP, whose performance is further studied in subsequent sections.
+As an illustration of the ease to extend an algorithm designed for an SMP to run on a cluster of SMPs, section~\ref{s:trav-dist} is the algorithm
+for distributed environment. 
 
  
 %% The Shiloach-Vishkin algorithm, representative of the ``graft-and-shortcut'' parallel approach,
