--- a/x10.runtime.cws/paper/IPDPS08/todo.txt
+++ b/x10.runtime.cws/paper/IPDPS08/todo.txt
@@ -9,3 +9,6 @@ conditional. Think about locking issues.
 
 * Check X10 reference and a sentence on its open-source at the
   beginning of the runtime section.
+
+* Discussion of the theoritical properties of X10. I just have some
+  sentence in bold saying it is to be done.
