*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/x10/code@4525 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.runtime.cws/paper/IPDPS08/todo.txt
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/todo.txt
@@ -9,3 +9,6 @@ conditional. Think about locking issues.
 
 * Check X10 reference and a sentence on its open-source at the
   beginning of the runtime section.
+
+* Discussion of the theoritical properties of X10. I just have some
+  sentence in bold saying it is to be done.
