--- a/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.bib
+++ b/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.bib
@@ -14,3 +14,16 @@
   journal = "(Techniche Hogeschool, Eindhoven, 1965). Reprinted in: F. Genuys (ed.), Programming Languages", 
   publisher = "Academic Press",
 }
+
+@inproceedings{X10-OOPSLA05,
+author = "P. Charles and C. Donawa and K. Ebcioglu and C. Grothoff and A. Kielstra and C. Van Praun and V. Saraswat and V. Sarkar", 
+title = "X10: An Object-Oriented Approach to Non-Uniform Cluster Computing",
+booktitle = "Proceedings of the 2005 ACM SIGPLAN Conference on Object-Oriented Programming Systems, Languages and Applications (OOPSLA)", 
+year = {2005} }
+
+@techreport{titaniumDoc,
+author = "P. Hilfinger (ed.) et.~al",
+title = "Titanium Language Reference Manual, Version 2.19",
+institution = "University of California, Berkeley",
+number = {UCB/EECS-2005-15}, 
+year = {2005} }
