changed to onecolumn format; added author info; shorten section 2: Intro to X10; Added ref info to *.bib
git-svn-id: svn://svn.code.sf.net/p/x10/code@4528 a326200e-df2c-42e0-81fa-597e909af41d

--- a/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
+++ b/trunk/x10.runtime.cws/paper/IPDPS08/IPDPS08_X10WS.tex
@@ -1,6 +1,6 @@
 
-\documentclass[onecolumn,12pt]{ieee}
-
+%\documentclass[onecolumn,12pt]{ieee}
+\documentclass[12pt]{article}
 %------------------------------------------------------------------------- 
 % 
 % Use \documentclass[pagenumbers]{ieee}
@@ -9,6 +9,7 @@
 % no page numbers for camera-ready copy.
 %
 %------------------------------------------------------------------------- 
+\usepackage[dvips,letterpaper,margin=1in]{geometry}
 \usepackage[pdftex]{graphicx}
 \usepackage{times}
 \usepackage{epsfig}
@@ -21,7 +22,19 @@
 \DeclareGraphicsExtensions{.jpg, .pdf, .mps, .gif, .png}
 \title{Solving Large, Irregular Graph Problems in X10}
 
-\author{IBM Research}
+\author{Guojing Cong,  Vijay Saraswat, and Tong Wen\\
+IBM T. J. Watson Research Center\\
+ \{ gcong, vsaraswa, tongwen \}@us.ibm.com\\ 
+\\
+Sreedhar Kodali\\
+IBM Systems and Technology Group\\
+srkodali@in.ibm.com\\
+\\
+Sriram Krishnamoorthy \\
+Ohio State University\\
+Columbus, OH 43210 \\
+sriram.krishnamoorthy@gmail.com\\
+}
 
 \maketitle
 \thispagestyle{empty}
